--- a/spark_connect.ipynb
+++ b/spark_connect.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "outputs": [],
    "source": [
     "ss.sparkContext.stop()"
@@ -47,13 +47,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "outputs": [],
    "source": [
     "from pyspark import SparkContext, SparkConf\n",
     "\n",
     "conf = SparkConf().setAppName(\"Job\").set(\"spark.driver.cores\", \"2\") # тут задаются все параметры SparkContext\n",
     "sc = SparkContext(conf=conf) # инициализируется SparkContext"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "outputs": [],
+   "source": [
+    "sc.stop()"
    ],
    "metadata": {
     "collapsed": false
