--- a/spark_tranform.ipynb
+++ b/spark_tranform.ipynb
@@ -251,6 +251,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "outputs": [],
+   "source": [
+    "spark.stop()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
