--- a/spark_test.ipynb
+++ b/spark_test.ipynb
@@ -2,17 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "id": "cd746e41-618c-4370-b6ed-0753a7e27ebe",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-08-18T11:45:37.240638Z",
+     "start_time": "2023-08-18T11:45:37.198482Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "'/usr/lib/spark/'"
-      ]
+      "text/plain": "'/usr/lib/spark/'"
      },
-     "execution_count": 32,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -24,9 +27,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "id": "71204e2e-8008-4e3c-9a0c-4bee2041ae51",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-08-18T11:45:37.975867Z",
+     "start_time": "2023-08-18T11:45:37.967806Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import os"
@@ -34,45 +42,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "id": "a0627720-89e3-4701-bbaa-e1191b9f9c75",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-08-18T11:45:39.004771Z",
+     "start_time": "2023-08-18T11:45:38.993764Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "environ{'HOSTNAME': 'fhmsenhsaiktkr0hqr7l',\n",
-       "        'SCRIPT_NAME': '__test.py',\n",
-       "        'TEMPLATE_FILENAME': 'template.py',\n",
-       "        'PWD': '/home/ivanrychko/.logs',\n",
-       "        'AIRFLOW__CORE__LOAD_EXAMPLES': 'False',\n",
-       "        'JUPYTER_PASSWORD': 'dT4pkNJA1DHpHwwtxRIP',\n",
-       "        'HOME': '/home/ivanrychko',\n",
-       "        'AIRFLOW_HOME': '/opt/airflow',\n",
-       "        'AIRFLOW__CORE__LOAD_DEFAULT_CONNECTIONS': 'False',\n",
-       "        'PG_VERSION': '13',\n",
-       "        'SHLVL': '1',\n",
-       "        'SPARK_USERNAME': 'ivanrychko',\n",
-       "        'PATH': '/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/home/ivanrychko/.local/bin',\n",
-       "        'INTERPRETER_NAME': 'python3',\n",
-       "        '_': '/usr/local/bin/supervisord',\n",
-       "        'LC_CTYPE': 'C.UTF-8',\n",
-       "        'SUPERVISOR_ENABLED': '1',\n",
-       "        'SUPERVISOR_PROCESS_NAME': 'jupyter',\n",
-       "        'SUPERVISOR_GROUP_NAME': 'jupyter',\n",
-       "        'PYDEVD_USE_FRAME_EVAL': 'NO',\n",
-       "        'JPY_SESSION_NAME': '/lessons/dags/Untitled.ipynb',\n",
-       "        'JPY_PARENT_PID': '15',\n",
-       "        'TERM': 'xterm-color',\n",
-       "        'CLICOLOR': '1',\n",
-       "        'FORCE_COLOR': '1',\n",
-       "        'CLICOLOR_FORCE': '1',\n",
-       "        'PAGER': 'cat',\n",
-       "        'GIT_PAGER': 'cat',\n",
-       "        'MPLBACKEND': 'module://matplotlib_inline.backend_inline'}"
-      ]
+      "text/plain": "environ{'HOSTNAME': 'fhmr7tigqkf5v271ckk4',\n        'SCRIPT_NAME': '__test.py',\n        'TEMPLATE_FILENAME': 'template.py',\n        'PWD': '/home/ivanrychko/.logs',\n        'AIRFLOW__CORE__LOAD_EXAMPLES': 'False',\n        'JUPYTER_PASSWORD': 'dT4pkNJA1DHpHwwtxRIP',\n        'HOME': '/home/ivanrychko',\n        'AIRFLOW_HOME': '/opt/airflow',\n        'AIRFLOW__CORE__LOAD_DEFAULT_CONNECTIONS': 'False',\n        'PG_VERSION': '13',\n        'SHLVL': '1',\n        'SPARK_USERNAME': 'ivanrychko',\n        'PATH': '/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/home/ivanrychko/.local/bin',\n        'INTERPRETER_NAME': 'python3',\n        '_': '/usr/local/bin/supervisord',\n        'LC_CTYPE': 'C.UTF-8',\n        'SUPERVISOR_ENABLED': '1',\n        'SUPERVISOR_PROCESS_NAME': 'jupyter',\n        'SUPERVISOR_GROUP_NAME': 'jupyter',\n        'PYDEVD_USE_FRAME_EVAL': 'NO',\n        'JPY_PARENT_PID': '15',\n        'TERM': 'xterm-color',\n        'CLICOLOR': '1',\n        'FORCE_COLOR': '1',\n        'CLICOLOR_FORCE': '1',\n        'PAGER': 'cat',\n        'GIT_PAGER': 'cat',\n        'MPLBACKEND': 'module://matplotlib_inline.backend_inline'}"
      },
-     "execution_count": 34,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
